--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -6,3 +6,32 @@
 body {
     color :#2F2D51;
 }
+
+/* Define basic app styles **/
+@layer base {
+    .button {
+        @apply rounded-lg px-2 py-1 text-sm shadow-md;
+    }
+    h1 {
+        @apply text-5xl font-bold my-2;
+        color : #5E4955;
+    }
+    
+    h2 {
+        @apply text-4xl font-bold my-2;
+        color : #5E4955;
+    }
+
+    h3 {
+        @apply text-3xl font-bold my-2;
+        color : #5E4955;
+    }
+    h4 {
+        @apply text-2xl font-bold my-2;
+        color : #5E4955;
+    }
+    h4 {
+        @apply text-xl font-bold my-2;
+        color : #5E4955;
+    }
+}
