Added new calendar. Added grade opinion selection. Added tick date selection. Added tries stepper.

--- a/src/css/app.less
+++ b/src/css/app.less
@@ -16,6 +16,7 @@
 }
 .theme-dark {
   background: var(--f7-page-bg-color);
+  --f7-stepper-fill-button-bg-color: var(--f7-theme-color);
   &.ios {
     --f7-bars-border-color: transparent;
     --f7-searchbar-input-bg-color: var(--f7-page-bg-color);
