--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -3,3 +3,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .btn-primary {
+      @apply my-2  uppercase block text-center  py-2 h-12 px-4 dark:bg-sky-500 bg-green-500 text-white 
+    }
+  }
