--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap');
+@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 
 @tailwind base;
 @tailwind components;
@@ -6,9 +7,12 @@
 
 @layer components {
     .btn-primary {
-      @apply my-2  uppercase block text-center  py-1 h-12 px-4 dark:bg-sky-500 bg-green-500 text-white 
+      @apply my-2 uppercase block text-center py-1 h-12 px-4 text-white;
+      background: rgba(56, 189, 248, 0.25);
+      border: 1px solid rgba(56, 189, 248, 0.35);
+      border-radius: 10px;
     }
     .btn-small {
-      @apply btn-primary px-2 py-0 h-8 
+      @apply btn-primary px-2 py-0 h-8
     }
   }
